Extract config.js

--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -6,6 +6,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 		<script src="https://apps-static.flock.co/js-sdk/0.1.0/flock.js"></script>
+		<script src="js/config.js"></script>
 		<script src="js/util.js"></script>
 		<script src="js/createCandidate.js"></script>
 	<body />
