Add input for time

--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -20,11 +20,11 @@
 		CV link:
 		<input type="url" id="cv_link" value="http://google.com"><br><br>
 		Role:
-		<select title="role">
+		<select id = "role">
 			<option value="platform">Platform</option>
 			<option value="application">Application</option>
-		</select>
-		<br/>
-		<br/>
+		</select><br><br>
+		Time:
+		<input type="datetime" id="time" value="25/09/2016 11:00"><br/><br/>
 	<button id="submit" type="button" class="pure-button pure-button-primary">Submit</button>
 </html>
