--- a/src/main/resources/templates/interviewer-view.html
+++ b/src/main/resources/templates/interviewer-view.html
@@ -11,21 +11,42 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/theme-textmate.js"></script>
 
     <!-- Firepad -->
-    <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.css"/>
+    <link rel="stylesheet" href="css/firepad.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <script src="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.min.js"></script>
     <script src="js/initfirepad.js"></script>
     <style>
         html { height: 100%; }
-        body { margin: 0; height: 100%; position: relative; }
-        #codepad {
-        width: 100%;
-        height: 100%;
-        }
+        body { margin: 0; height: 100%; }
+        #topbar { padding-top: 10px; padding-bottom: 10px; padding-left: 15px; width: 100%; color:#FFFFFF; font:
+        100 14px/1.4 'Helvetica Neue', monospace; background-color: #292F38; border-bottom: 1px solid white; letter-spacing: 1px }
+        #codepad { width: 100%; height: 100%; }
+        #header_div { padding-left:10px; padding-top:10px; padding-bottom:10px; font:lighter 14px/1 'Helvetica Neue',
+        monospace; width:100%; background-color: #292F38; color: #FFFFFF }
+        #comments { padding-left:10px; padding-top:10px; width: 100%; height: 30%; background-color: #292F38; color:
+        #FFFFFF; font:lighter 14px/1 'Helvetica Neue', monospace; float: right;}
+        a.powered-by-firepad { display: none }
+        img { vertical-align:middle; }
+        span { vertical-align:middle; }
     </style>
 </head>
 <body onload="initializeFirepad()">
-<div id="codepad">
+<div id="topbar">
+
+    <img src="images/logo.png" width="32px" height="32px">
+    <span style="font-size: 18px; vertical-align:middle;"> Hyre App </span> &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/name.png" width="16px" height="16px"> &nbsp;
+    <span id="candidate_name">Bharat Singhvi</span> &nbsp; &nbsp; &nbsp; &nbsp;
+    <img src="images/email.png" width="16px" height="16px"> &nbsp;
+    <span id="candidate_email"> bharat.s@flock.co </span> &nbsp; &nbsp; &nbsp; &nbsp;
+    <img src="images/resume.png" width="16px" height="16px"> &nbsp;
+    <span id="candidate_cv"> http://www.google.com </span>
+
+    <button type="button" class="btn btn-primary btn-danger" style="float: right; margin-right: 15px">End Interview
+    </button>
 
 </div>
+<div id="codepad"></div>
+<textarea id="comments" placeholder="Interview Minutes"></textarea>
 </body>
 </html>
