Fetch and show questions

--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -24,6 +24,9 @@
 			<option value="platform">Platform</option>
 			<option value="application">Application</option>
 		</select><br><br>
+	    Question:
+		<select id = "question">
+		</select><br><br>
 		Time:
 		<input type="datetime" id="time" value="25/09/2016 11:00"><br/><br/>
 	<button id="submit" type="button" class="pure-button pure-button-primary">Submit</button>
