--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="js/pure-min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
-		<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-		<script src="https://apps-static.flock.co/js-sdk/0.1.0/flock.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/util.js"></script>
-		<script src="js/createCandidate.js"></script>
-	<body />
-		<b>Candidate Details</b>
-		<br/>
-		<br/>
-		Name:
-		<input type="text" id="name" value="John Done"><br><br>
-		Email:
-		<input type="email" id="email" value="john.doe@gmail.com"><br><br>
-		CV link:
-		<input type="url" id="cv_link" value="http://google.com"><br><br>
-		Role:
-		<select id = "role">
-			<option value="platform">Platform</option>
-			<option value="application">Application</option>
-		</select><br><br>
+<head>
+    <link rel="stylesheet" href="css/pure-min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://apps-static.flock.co/js-sdk/0.1.0/flock.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/createCandidate.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript">
+            $(function () {
+                $('#timepicker').datetimepicker({
+                    format: 'LT'
+                });
+            });
 
-		<br><br>
+            $(function () {
+                $('#datepicker').datetimepicker({
+                    format: 'DD-MM-YYYY'
+                });
+            });
+    </script>
+<body/>
 
-		<b>Interview Details</b><br><br>
-		Interviewer Name:
-		<select id = "interviewer"></select><br><br>
-	    Question:
-		<select id = "question"></select><br><br>
-		Time:
-		<input type="datetime" id="time" value="25/09/2016 11:00"><br/><br/>
-	<button id="submit" type="button" class="pure-button pure-button-primary">Submit</button>
+<form role="form">
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="col-xs-6">
+                <h3>Candidate Details </h3><br/>
+
+                <div class="form-group input-group">
+                    <span class="input-group-addon">@</span>
+                    <input type='text' class="form-control" id="candidate_name" placeholder="Candidate Name"/>
+                </div>
+                <div class="form-group input-group">
+                    <span class="input-group-addon"><span class="glyphicon-envelope"></span></span>
+                    <input type='text' class="form-control" id="candidate_email" placeholder="Candidate Email"/>
+                </div>
+                <div class="form-group input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-file"></span></span>
+                    <input type='text' class="form-control" id="candidate_cv" placeholder="Candidate CV"/>
+                </div>
+                <div class="form-group input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-briefcase"></span></span>
+                    <select id="role" class="form-control">
+                        <option value="" disabled selected style="display: none;">Select Role</option>
+                        <option value="platform">Platform</option>
+                        <option value="application">Application</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <h3>Interview Details </h3><br/>
+
+                <div class="form-group input-group">
+                    <span class="input-group-addon">@</span>
+                    <select id="interviewer" class="form-control">
+                        <option value="" disabled selected style="display: none;">Select Interviewer</option>
+                    </select>
+                </div>
+                <div class="form-group input-group">
+                    <span class="input-group-addon">?</span>
+                    <select id="question" class="form-control">
+                        <option value="" disabled selected style="display: none;">Select Question</option>
+                    </select>
+                </div>
+                <div class="form-group input-group date" id="datepicker">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                    <input type='text' class="form-control"/>
+                </div>
+                <div class="form-group input-group date" id="timepicker">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-time"></span>
+                    </span>
+                    <input type='text' class="form-control"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary" style="margin: 0 auto; display:block;">Submit Button</button>
+</form>
 </html>
