--- a/src/main/resources/templates/interviewer-view.html
+++ b/src/main/resources/templates/interviewer-view.html
@@ -18,29 +18,58 @@
     <style>
         html { height: 100%; }
         body { margin: 0; height: 100%; }
-        #topbar { padding-top: 10px; padding-bottom: 10px; padding-left: 15px; width: 100%; color:#FFFFFF; font:
-        100 14px/1.4 'Helvetica Neue', monospace; background-color: #292F38; border-bottom: 1px solid white; letter-spacing: 1px }
-        #codepad { width: 100%; height: 100%; }
+        #topbar { padding-top: 10px; padding-bottom: 10px; padding-left: 15px; width: 80%; color:#FFFFFF; font:
+        100 14px/1.4 'Helvetica Neue', monospace; background-color: #292F38; border-bottom: 1px solid white; letter-spacing: 1px; }
+        #codepad { width: 80%; height: 100%; }
         #header_div { padding-left:10px; padding-top:10px; padding-bottom:10px; font:lighter 14px/1 'Helvetica Neue',
         monospace; width:100%; background-color: #292F38; color: #FFFFFF }
-        #comments { padding-left:10px; padding-top:10px; width: 100%; height: 30%; background-color: #292F38; color:
-        #FFFFFF; font:lighter 14px/1 'Helvetica Neue', monospace; float: right;}
+        #comments { padding-left:10px; padding-top:10px; width: 80%; height: 30%; background-color: #292F38; color:
+        #FFFFFF; font:lighter 14px/1 'Helvetica Neue', monospace;}
         a.powered-by-firepad { display: none }
         img { vertical-align:middle; }
         span { vertical-align:middle; }
+        #rightbar { padding-top: 10px; padding-bottom: 10px; background-color: #292F38;padding-left: 5px;padding-right: 5px; width: 20%; height : 100%; float:right; }
+
+
+
+
     </style>
 </head>
 <body onload="initializeFirepad()">
+
+<div id="rightbar" class="col-lg-6">
+    <!--{{#rounds}}-->
+
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            Round: {{sequence}}
+        </div>
+        <div class="panel-body">
+            <p>
+                Link: <b>{{collabLink}}</b> <br/>
+                Comments: {{comments}} <br/>
+                Rating: <b>{{rating}}</b> <br/>
+            </p>
+        </div>
+        <div class="panel-footer">
+            Verdict: <b>{{verdict}}</b>
+        </div>
+    </div>
+
+    <!--{{/rounds}}-->
+</div>
 <div id="topbar">
 
     <img src="images/logo.png" width="32px" height="32px">
     <span style="font-size: 18px; vertical-align:middle;"> Hyre App </span> &nbsp;&nbsp;&nbsp;&nbsp;
     <img src="images/name.png" width="16px" height="16px"> &nbsp;
-    <span id="candidate_name">Bharat Singhvi</span> &nbsp; &nbsp; &nbsp; &nbsp;
+    <span id="candidate_name">{{candidate.name}}</span> &nbsp; &nbsp; &nbsp; &nbsp;
     <img src="images/email.png" width="16px" height="16px"> &nbsp;
-    <span id="candidate_email"> bharat.s@flock.co </span> &nbsp; &nbsp; &nbsp; &nbsp;
+    <span id="candidate_email">{{candidate.email}}</span> &nbsp; &nbsp; &nbsp; &nbsp;
     <img src="images/resume.png" width="16px" height="16px"> &nbsp;
-    <span id="candidate_cv"> http://www.google.com </span>
+    <span id="candidate_cv">{{candidate.cvLink}}</span> &nbsp; &nbsp; &nbsp; &nbsp;
+    <img src="images/name.png" width="16px" height="16px"> &nbsp;
+    <span id="candidate_cv">{{candidate.role}}</span>
 
     <button type="button" class="btn btn-primary btn-danger" style="float: right; margin-right: 15px">End Interview
     </button>
