Update id values in new page

--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -38,15 +38,15 @@
 
                 <div class="form-group input-group">
                     <span class="input-group-addon">@</span>
-                    <input type='text' class="form-control" id="candidate_name" placeholder="Candidate Name"/>
+                    <input type='text' class="form-control" id="name" placeholder="Candidate Name"/>
                 </div>
                 <div class="form-group input-group">
                     <span class="input-group-addon"><span class="glyphicon-envelope"></span></span>
-                    <input type='text' class="form-control" id="candidate_email" placeholder="Candidate Email"/>
+                    <input type='text' class="form-control" id="email" placeholder="Candidate Email"/>
                 </div>
                 <div class="form-group input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-file"></span></span>
-                    <input type='text' class="form-control" id="candidate_cv" placeholder="Candidate CV"/>
+                    <input type='text' class="form-control" id="cv_link" placeholder="Candidate CV"/>
                 </div>
                 <div class="form-group input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-briefcase"></span></span>
@@ -87,6 +87,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary" style="margin: 0 auto; display:block;">Submit Button</button>
+    <button id="submit" type="submit" class="btn btn-primary" style="margin: 0 auto; display:block;">Submit</button>
 </form>
 </html>
