--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -8,7 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://apps-static.flock.co/js-sdk/0.1.0/flock.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+
+    <!-- ACE and its JavaScript mode and theme files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/mode-javascript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/theme-textmate.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/initfirepad.js"></script>
     <script src="js/util.js"></script>
     <script src="js/createCandidate.js"></script>
     <script src="js/config.js"></script>
