--- a/src/main/resources/templates/interviewer-preview.html
+++ b/src/main/resources/templates/interviewer-preview.html
@@ -16,7 +16,7 @@
                 <div class="panel-body">
                     Name: {{candidateName}}<br/>
                     Email: {{email}}<br/>
-                    CV Link: {{cvLink}}<br/>
+                    CV Link: <a>{{cvLink}}</a><br/>
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        Collab Link: {{collabLink}} <br/>
+                        Collab Link: <a>{{collabLink}}></a> <br/>
                         Ques: {{questionTitle}} <br/>
                         Level: {{questionLevel}}<br/>
                         Time: {{time}} <br/>
