--- a/src/main/resources/templates/candidate-view.html
+++ b/src/main/resources/templates/candidate-view.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <script src="https://cdn.firebase.com/libs/firepad/1.4.0/firepad.min.js"></script>
+    <script src="js/util.js"></script>
     <script src="js/initfirepad.js"></script>
     <style>
         html { height: 100%; }
