--- a/src/main/resources/templates/interviewer-preview.html
+++ b/src/main/resources/templates/interviewer-preview.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        Collab Link: <a>{{collabLink}}></a> <br/>
+                        Collab Link: <a>{{collabLink}}</a> <br/>
                         Ques: {{questionTitle}} <br/>
                         Level: {{questionLevel}}<br/>
                         Time: {{time}} <br/>
