--- a/src/main/resources/templates/candidate-edit.html
+++ b/src/main/resources/templates/candidate-edit.html
@@ -85,6 +85,10 @@
         <div class="col-md-4">
             <h3>Interview Details </h3><br/>
 
+            <div style="display: none">
+                <input id="email" type="text" value="{{candidate.email}}" />
+            </div>
+
             <div class="form-group input-group">
                 <span class="input-group-addon">@</span>
                 <select id="interviewer" class="form-control">
