Fix issues with edit page

--- a/src/main/resources/templates/candidate-edit.html
+++ b/src/main/resources/templates/candidate-edit.html
@@ -20,6 +20,10 @@
     <script src="js/config.js"></script>
     <script src="js/util.js"></script>
     <script src="js/initfirepad.js"></script>
+    <script type="text/javascript">
+        var groupId = '{{candidate.groupId}}'
+        var role = '{{candidate.role}}'
+    </script>
     <script src="js/editCandidate.js"></script>
     <script type="text/javascript">
             $(function () {
