Don't show interviewers already interacted with the candidate in edit page

--- a/src/main/resources/templates/candidate-edit.html
+++ b/src/main/resources/templates/candidate-edit.html
@@ -23,6 +23,7 @@
     <script type="text/javascript">
         var groupId = '{{candidate.groupId}}'
         var role = '{{candidate.role}}'
+        var email= '{{candidate.email}}'
     </script>
     <script src="js/editCandidate.js"></script>
     <script type="text/javascript">
