--- a/src/main/resources/templates/interviewer-view.html
+++ b/src/main/resources/templates/interviewer-view.html
@@ -30,16 +30,14 @@
         #codepad { width: 80%; height: 100%; }
         #header_div { padding-left:10px; padding-top:10px; padding-bottom:10px; font:lighter 14px/1 'Helvetica Neue',
         monospace; width:100%; background-color: #292F38; color: #FFFFFF }
-        #comments { padding-left:10px; padding-top:10px; width: 80%; height: 30%; background-color: #292F38; color:
+        #comments { padding-left:10px; padding-top:10px; width: 60%; height: 30%; background-color: #292F38; color:
         #FFFFFF; font:lighter 14px/1 'Helvetica Neue', monospace;}
+        #ratings { padding-left:10px; padding-top:30px; width: 20%; height: 30%; background-color: #292F38; color:
+        #FFFFFF; font:lighter 14px/1 'Helvetica Neue', monospace; float:right;padding-right:10px;}
         a.powered-by-firepad { display: none }
         img { vertical-align:middle; }
         span { vertical-align:middle; }
         #rightbar { padding-top: 10px; padding-bottom: 10px; background-color: #292F38;padding-left: 5px;padding-right: 5px; width: 20%; height : 100%; float:right; }
-
-
-
-
 
 
     </style>
@@ -85,5 +83,29 @@
 </div>
 <div id="codepad"></div>
 <textarea id="comments" placeholder="Interview Minutes"></textarea>
+<div id="ratings">
+    <div class="form-group">
+        <label for="usr">Rating:</label>
+        <select class="form-control" id="rating">
+            <option value="" disabled selected style="display: none;">Select Rating</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+    </div>
+    <div>
+        <label for="usr">Verdict:</label>
+        <form>
+            <label class="radio-inline">
+                <input type="radio" name="optradio" id="pass">Pass
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="optradio" id="reject">Reject
+            </label>
+        </form>
+    </div>
+</div>
 </body>
 </html>
