Add questions for marketing

--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -44,7 +44,7 @@
 
                 <div class="form-group input-group">
                     <span class="input-group-addon">@</span>
-                    <input type='text' class="form-control" id="name" placeholder="Candidate Name" value="John Doe"/>
+                    <input type='text' class="form-control" id="name" placeholder="Candidate Name" value="Ayush Jindal"/>
                 </div>
                 <br/>
 
@@ -56,7 +56,7 @@
 
                 <div class="form-group input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-file"></span></span>
-                    <input type='text' class="form-control" id="cv_link" placeholder="Candidate CV" value="http://google.com"/>
+                    <input type='text' class="form-control" id="cv_link" placeholder="Candidate CV" value="http://directi.com"/>
                 </div>
                 <br/>
 
@@ -92,7 +92,7 @@
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
-                    <input type='text' data-format="dd-MM-yyyy" class="form-control"/>
+                    <input type='text' data-format="dd-MM-yyyy" class="form-control" placeholder="Choose date">
                 </div>
                 <br/>
 
@@ -100,7 +100,7 @@
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-time"></span>
                     </span>
-                    <input type='text' data-format="hh:mm" class="form-control"/>
+                    <input type='text' data-format="hh:mm" class="form-control" placeholder="Choose time"/>
                 </div>
             </div>
         </div>
