--- a/src/main/resources/templates/candidate-edit.html
+++ b/src/main/resources/templates/candidate-edit.html
@@ -114,7 +114,7 @@
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
-                <input type='text' data-format="dd-MM-yyyy" class="form-control"/>
+                <input type='text' data-format="dd-MM-yyyy" class="form-control" placeholder="Choose date">
             </div>
             <br/>
 
@@ -122,7 +122,7 @@
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-time"></span>
                     </span>
-                <input type='text' data-format="hh:mm" class="form-control"/>
+                <input type='text' data-format="hh:mm" class="form-control" placeholder="Choose time"/>
             </div>
             <button id="submit" type="submit" class="btn btn-primary" style="margin: 0 auto; display:block;">
                 Submit
