--- a/src/main/resources/templates/candidate-new.html
+++ b/src/main/resources/templates/candidate-new.html
@@ -50,7 +50,7 @@
 
                 <div class="form-group input-group">
                     <span class="input-group-addon"><span class="glyphicon-envelope"></span></span>
-                    <input type='text' class="form-control" id="email" placeholder="Candidate Email" value="ayush.j@flock.co"/>
+                    <input type='text' class="form-control" id="email" placeholder="Candidate Email" value="ayushj@riva.co"/>
                 </div>
                 <br/>
 
